@@ -30,6 +30,7 @@ import java.util.function.Consumer;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 
@@ -58,10 +59,10 @@ abstract class AbstractArchiveIntegrationTests {
 	}
 
 	protected AssertProvider<JarAssert> jar(File file) {
-		return new AssertProvider<>() {
+		return new AssertProvider<JarAssert>() {
 
 			@Override
-			@Deprecated(since = "2.3.0", forRemoval = false)
+			@Deprecated
 			public JarAssert assertThat() {
 				return new JarAssert(file);
 			}
@@ -181,7 +182,7 @@ abstract class AbstractArchiveIntegrationTests {
 			withJarFile((jarFile) -> withEntries(jarFile,
 					(entries) -> matches.addAll(entries.map(ZipEntry::getName)
 						.filter((name) -> name.startsWith(path) && name.length() > path.length())
-						.toList())));
+						.collect(Collectors.toList()))));
 			return new ListAssert<>(matches);
 		}
 
